# pravoslavni-kalendar-i-podsetnik

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
src/: main.cpp
